--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,12 @@ hr {
 
 @media screen and (max-width: 960px) {
 	#sidebar {
+	width: 300px;
+	}
+}
+
+@media screen and (max-width: 880px) {
+	#sidebar {
 		height: auto;
 		max-width: 285px;
 		float: none;
